<resources>
    <string name="app_name">CL Generator</string>
    <string name="hint_contact_name">Contact Name</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_my_display_name">My Display Name</string>
    <string name="checkbox_inlcude_junior">Include \'Junior\'</string>
    <string name="checkbox_imidiate_start">Imidiate Start</string>
    <string name="hint_start_date">Start Date</string>
    <string name="button_preview_message">Preview Message</string>
    <string name="button_send_message">Send Message</string>
    <string name="text_jobs_1">Backend Developer</string>
    <string name="text_jobs_2">Frontend Developer</string>
    <string name="text_jobs_3">Project Manager</string>
    <string name="text_jobs_4">App Developer</string>
</resources>