<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="48dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contact_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="My test Name"
                android:inputType="textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contact_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="017645880980"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_my_display_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="Diplsa Name"
                android:inputType="textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/check_box_junior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/checkbox_inlcude_junior" />

        <Spinner
            android:id="@+id/spinner_job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        <CheckBox
            android:id="@+id/check_box_immidiate_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/checkbox_imidiate_start" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_start_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="01/06/2023"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/button_preview"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_preview_message" />

    </LinearLayout>
</ScrollView>